traefik/07-basic-auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-auth
  namespace: whoami
spec:
  basicAuth:
    secret: whoami-users
    removeHeader: true
